--- a/AR_model/run_config_LSTM.json
+++ b/AR_model/run_config_LSTM.json
@@ -3,18 +3,18 @@
 
     "test_station": "ns Uldumkær",
     "prcp_station": "05225",
-    "prcp_station": "05225",
 	
     "train_period": ["2012-01-01","2018-12-31"],
     "val_period": ["2019-01-01","2021-12-31"],
     "test_period": ["2022-01-01","2022-12-31"],
 
-    "training_horizon": [12, 24, 48, 168],
-    "imputation_horizon": [12, 24, 48, 168],
+    "training_horizon": [1],
+    "imputation_horizon": [1],
+    "plot_horizon": [48, 168],
 
-    "epochs": 2,
-    "batch_size": [1000],
-    "n_models": 1,
+    "epochs": 1,
+    "batch_size": [900],
+    "n_models": 2,
 
     "neurons": [25],
     "layers": [2],
