--- a/AR_model/run_config_LSTM.json
+++ b/AR_model/run_config_LSTM.json
@@ -8,8 +8,8 @@
     "val_period": ["2019-01-01","2021-12-31"],
     "test_period": ["2022-01-01","2022-12-31"],
 
-    "training_horizon": [1],
-    "imputation_horizon": [1],
+    "training_horizon": [1, 1, 1, 1, 1],
+    "imputation_horizon": [1, 48],
     "plot_horizon": [48, 168],
 
     "epochs": 1,
@@ -18,6 +18,6 @@
 
     "neurons": [25],
     "layers": [2],
-    "window_size": [10]
+    "window_size": [10, 11]
 
 }
