adjustments for plotting 2stations

--- a/AR_model/run_config_LSTM.json
+++ b/AR_model/run_config_LSTM.json
@@ -3,7 +3,7 @@
 
     "test_station": "ns Uldumkær",
     "prcp_station": "05225",
-    "other_station": "Brestenbro",
+    "other_station": "None",
 
     "time_encoding": "True",
 	
