--- a/Model/run_config_LSTM.json
+++ b/Model/run_config_LSTM.json
@@ -3,9 +3,9 @@
 
     "test_station": "ns Uldumkær",
     "prcp_station": "05225",
-    "other_station": "None",
+    "other_station": "Brestenbro",
 
-    "time_encoding": "True",
+    "time_encoding": "False",
 	
     "train_period": ["2015-10-31","2018-10-31"],
     "val_period": ["2018-11-01","2019-10-31"],
